--- a/root/init.mapphone_cdma.rc
+++ b/root/init.mapphone_cdma.rc
@@ -1,5 +1,5 @@
 on init
-    loglevel 8
+    loglevel 3
 
     export EXTERNAL_STORAGE /storage/sdcard1
     export SECONDARY_STORAGE /storage/sdcard0
@@ -86,11 +86,11 @@ on post-fs
 
     # Configure kernel options
     # Disable automatic power control for OHCI USB IPC Temporarily
-    #    write /sys/devices/platform/ohci-omap3/usb1/1-1/power/control auto
+    write /sys/devices/platform/ohci-omap3/usb1/1-1/power/control auto
 
 # NFC configuration
     # Reset system time
-    write /sys/class/rtc/rtc0/unsecured_rtc on
+    write /sys/class/rtc/rtc0/unsecured_rtc off
     # Disable a system-wide task dump on OOM in default
     write /proc/sys/vm/oom_dump_tasks 0
     write /proc/sys/fs/suid_dumpable 2
@@ -102,10 +102,10 @@ on post-fs
     write /sys/devices/w1\ bus\ master/w1_master_search 2
     write /sys/devices/system/cpu/cpu0/cpuidle/enable_state 1
     # Increase MMC block device readaheads
-    write /sys/block/mmcblk0/queue/read_ahead_kb 1024
-    write /sys/block/mmcblk1/queue/read_ahead_kb 1024
+    write /sys/block/mmcblk0/queue/read_ahead_kb 512
+    write /sys/block/mmcblk1/queue/read_ahead_kb 512
     # Set enable_smp if BT LE is supported
-    write /sys/module/bluetooth/parameters/enable_smp 1
+    write /sys/module/bluetooth/parameters/enable_smp 0
     # Set mot_pass_through_mt_input to true for ICS based releases
     write /sys/module/hid_motorola/parameters/mot_pass_through_mt_input 1
     # Disable SysRq keyboard trigger
@@ -460,8 +460,6 @@ on boot
    chown system system /sys/devices/platform/omap4_duty_cycle/enabled
    chown system system /sys/class/hwmon/hwmon0/device/temp1_max
    chown system system /sys/class/hwmon/hwmon0/device/temp1_max_hyst
-# set the size of the dns cache.
-    setprop ro.net.dns_cache_size 400
 # Enable production security key check for 3LM
     setprop ro.3lm.production 1
 # Define TCP buffer sizes for various networks
@@ -532,19 +530,15 @@ on property:sys.chargeonly.mode=1
 service tund /system/bin/tund
     class core
     socket tund stream 0660 vpn system
-    ioprio be 2
 service dnsmasq /system/bin/logwrapper /system/bin/dnsmasq -C/data/misc/wifi/dns.conf -k
     class main
     group wifi
-    disabled
     oneshot
 service mynet_start /system/bin/logwrapper /system/bin/sh /data/misc/wifi/forward_start.sh
     class main
-    disabled
     oneshot
 service mynet_stop /system/bin/logwrapper /system/bin/sh /data/misc/wifi/forward_stop.sh
     class main
-    disabled
     oneshot
 # aplogd on at boot in emulator
 on property:ro.kernel.qemu=1
@@ -580,7 +574,6 @@ service battd /system/bin/battd
 service charge_only_mode /system/bin/charge_only_mode
     user root
     group graphics system input
-    disabled
 service whisperd /system/bin/whisperd /dev/ttyO1
     class core
     user mot_whisper
@@ -595,98 +588,80 @@ service hciattach /system/bin/hciattach -l
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 service nap /system/bin/sdptool add NAP
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 service del_nap /system/bin/sdptool remove NAP
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 service panu /system/bin/sdptool add PANU
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 service del_panu /system/bin/sdptool remove PANU
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 service napics /system/bin/sh /system/bin/napics.sh
     class main
     user root
-    disabled
     oneshot
 service btdhcpd /system/bin/dnsmasq -C /system/etc/btpan.conf
     class main
     user root
-    disabled
     oneshot
 service map /system/bin/sdptool add --channel=20 --network=2 MAP
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
     oneshot
 # Ecompass daemon
 service akmd8975 /system/bin/akmd8975
     class main
     user compass
     group compass misc input
-service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+service p2p_supplicant /system/bin/wpa_supplicant
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N
     -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -puse_p2p_group_interface=1
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
-service wpa_supplicant /system/bin/wpa_supplicant \
+service wpa_supplicant /system/bin/wpa_supplicant
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin
     class main
     socket wpa_wlan0 dgram 660 wifi wifi
-    disabled
     oneshot
 service dhcpcd_wlan0 /system/bin/dhcpcd -aABDKL
     class main
-    disabled
     oneshot
 service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     class main
-    disabled
     oneshot
 service iprenew_p2p /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 service iprenew_bnep0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 service dhcpcd_usbeth0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 service hostapd_bin /system/bin/hostapd -d /data/misc/wifi/hostapd.conf
     socket wpa_wlan0 dgram 660 wifi wifi
     class main
-    disabled
     oneshot
 service pvrsrv /system/vendor/bin/pvrsrvinit
     class core
@@ -695,20 +670,17 @@ service pvrsrv /system/vendor/bin/pvrsrvinit
     oneshot
 service bugtogo /system/bin/bugtogo.sh
     class main
-    disabled
     user root
     oneshot
     keycodes 114 115
 service pppd-ril /system/bin/pppd-ril /dev/ttyUSB0 call pppd-ril.options plugin /system/lib/libpppd_plugin-ril.so
     class main
     user root
-    disabled
     oneshot
 service smc /system/bin/startup_smc.sh
     class core
     user mot_tpapi
     group mot_tpapi
-    disabled
     oneshot
 service modemlog /system/bin/modemlog
     class core
@@ -722,18 +694,16 @@ service modemlog /system/bin/modemlog
 # defaults for the com.motorola.android.settings.aplogd Java Service and
 # ContentProvider which control it.
 service aplogd /system/bin/aplogd
-    #user log
-    #group log system sdcard_rw mount
+    user log
+    group log system sdcard_rw mount
     # The user and group definitions above are intentionally disabled and left
     # only as documentation. It actually starts as root and immediately drops
     # to log plus those groups after preserving CAP_SYS_ADMIN, which is required
     # for kernel logging.
-    disabled
 service fmradio /system/bin/fmradioserver
     class main
     user system
     group bluetooth net_bt_admin net_raw net_admin misc
-    disabled
 service ftmipcd /system/bin/ftmipcd
     class main
     user radio
@@ -743,14 +713,12 @@ service qbplogd /system/bin/qbplogd
     user radio
     group sdcard_rw radio inet
     oneshot
-    disabled
 service dund_dialup /system/bin/dund --listen --channel=6 --nodetach --dialup
     class main
     group net_bt net_bt_admin
-    disabled
     oneshot
 on property:dev.bootcomplete=1
-#    start loadpreinstalls
+start loadpreinstalls
 service secclkd /system/bin/secclkd
     class main
     socket secclk_socket stream 660 mot_secclkd radio
@@ -759,7 +727,6 @@ service secclkd /system/bin/secclkd
 service gadget-qbp-modem /system/bin/tty2ttyd persist.ril.modem.ttydevice /dev/ttyGS2 0 1024
     user radio
     group radio
-    disabled
 service thermal_manager /system/bin/thermaldaemon
     class main
     user system
